[fix] Add project.clj workaround for nginx-clojure #273